--- a/index.css
+++ b/index.css
@@ -4,19 +4,18 @@ body {
 }
 
 .init-bg {
+    box-sizing: border-box;
+    height: 100svh;
+    padding-top: 200px;
     color: white;
-    padding: 50px;
-    padding-top: 150px;
-    padding-bottom: 150px;
     margin: 0px;
-    background-color: aqua;
     background-size: cover;
     background-image: url("pexels-codioful-(formerly-gradienta)-7134986.jpg");
 }
 @media (min-width:1000px) {
     .init-bg {
-        padding-left: 300px;
-        padding-right: 300px;
+        padding-left: 200px;
+        padding-right: 200px;
     }
 }
 
@@ -25,13 +24,13 @@ body {
 }
 
 .home-header {
-    font-size: 80px;
+    font-size: 120px;
     margin: 0px;
 }
 
 .home-first-content {
-    margin-top: 40px;
-    font-size: 18px;
+    margin-top: 100px;
+    font-size: 36px;
     font-weight: bold;
 }
 
@@ -42,4 +41,12 @@ body {
     margin-right: auto;
     margin-top: 50px;
     margin-bottom: 50px;
+}
+
+.prof-pic {
+    width: 500px;
+    float: right;
+    display: block;
+    border-radius: 50%;
+    margin-left: 100px;
 }
