--- a/index.css
+++ b/index.css
@@ -1,52 +1,132 @@
-body {
-    margin: 0px;
-    font-family: 'roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+/* This font I love */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
-.init-bg {
+/* For all elements to help make things easier down the road*/
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+/* ====================== HEADER ====================== */
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 8%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1;
+}
+
+/* My name */
+.logo {
+    font-size: 30px;
+    text-decoration: none;
+    font-weight: 600;
+    color: #eee;
+}
+
+.navbar a {
+    font-size: 24px;
+    color: #eee;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 40px;
+    transition: .3s;
+}
+.navbar a:hover {
+    color: #bbb;
+}
+
+/* ====================== LANDING PAGE ====================== */
+
+.landing {
+    display: flex;
+    align-items: center;
+    color: #eee;
     height: 100svh;
-    padding-top: 200px;
-    color: white;
-    margin: 0px;
-    background-size: cover;
-    background-image: url("pexels-codioful-(formerly-gradienta)-7134986.jpg");
-}
-@media (min-width:1000px) {
-    .init-bg {
-        padding-left: 200px;
-        padding-right: 200px;
-    }
+    background-image: url("gradientDark.png");
+    padding: 0 10%;
+    justify-content: space-between;
 }
 
-.next {
-    height: 500px
+.landing img {
+    width: 600px;
+    border-radius: 50%;
 }
 
-.home-header {
+.landing-content {
+    max-width: 700px;
+}
+.landing-content h1 {
     font-size: 120px;
-    margin: 0px;
+    font-weight: 700;
+}
+.landing-content h2 {
+    font-size: 42px;
+    color:mediumpurple;
+    margin-bottom: 10px;
+}
+.landing-content h3 {
+    font-weight: 600;
+    font-size: 20px;
 }
 
-.home-first-content {
-    margin-top: 100px;
-    font-size: 36px;
-    font-weight: bold;
+.socials {
+    position: absolute;
+    bottom: 120px;
+    width: 250px;
+    display: flex;
+    justify-content: space-between;
 }
+.socials a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    background: transparent;
+    border: 2px solid #eee;
+    border-radius: 50%;
+    color: #eee;
+    text-decoration: none;
+    font-size: 36px;
+    z-index: 2;
+    overflow: hidden;
+    transition: .5s;
+}
+/* Cool hover fill effect ::before = cosmetic pesudoelement*/
+.socials a::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: white;
+    z-index: -1;
+    transition: .5s;
+}
+.socials a:hover {
+    color: mediumpurple
+}
+.socials a:hover::before {
+    width: 100%;
+}
+
+/* ====================== NO CONTENT HERE YET ====================== */
 
 .no-content {
     width: 600px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-.prof-pic {
-    width: 500px;
-    float: right;
-    display: block;
-    border-radius: 50%;
-    margin-left: 100px;
+    margin-top: 200px;
+    margin-bottom: 200px;
 }
