--- a/index.css
+++ b/index.css
@@ -61,20 +61,20 @@
 }
 
 .landing-content {
-    max-width: 700px;
+    max-width: 900px;
 }
 .landing-content h1 {
     font-size: 120px;
     font-weight: 700;
 }
 .landing-content h2 {
-    font-size: 42px;
+    font-size: 48px;
     color:mediumpurple;
     margin-bottom: 10px;
 }
 .landing-content h3 {
     font-weight: 600;
-    font-size: 20px;
+    font-size: 24px;
 }
 
 .socials {
@@ -97,7 +97,7 @@
     color: #eee;
     text-decoration: none;
     font-size: 36px;
-    z-index: 2;
+    z-index: 0;
     overflow: hidden;
     transition: .5s;
 }
@@ -120,13 +120,39 @@
     width: 100%;
 }
 
-/* ====================== NO CONTENT HERE YET ====================== */
+/* ====================== ABOUT ME ====================== */
 
-.no-content {
-    width: 600px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 200px;
-    margin-bottom: 200px;
+.about {
+    padding: 60px 10%;
+    display: flex;
+    flex-direction: column;
+    background-color: #111;
+    color: #eee;
+    height: 100svh;
+    font-size: 30px;
 }
+.about-typing {
+    font-size: 100px;
+    font-weight: 700;
+    color: #888;
+    margin-left: 12%;
+    padding-top: 20px;
+}
+.about-typing .about-prefix {
+    margin-right: 2px;
+    color: #eee
+}
+.about-words {
+    color: mediumpurple;
+}
+.about-content {
+    display: flex;
+}
+.about-content p {
+    margin-top: 50px;
+    max-width: 400px;
+    margin-left: 2%;
+}
+
+
+
