--- a/astronomy/astronomy.css
+++ b/astronomy/astronomy.css
@@ -33,7 +33,7 @@ body {
     position: fixed;
     inset: 0;
     text-align: center;
-    font-size: 160px;
+    font-size: clamp(60px, 12vw, 1000px);
     z-index: -1;
 }
 
