--- a/index.css
+++ b/index.css
@@ -134,20 +134,19 @@ body {
 /* ====================== ABOUT ME ====================== */
 
 .about {
-    padding: 60px 10%;
-    display: flex;
-    flex-direction: column;
+    position: relative;
+    isolation: isolate;
     background-color: #111;
     color: #eee;
     height: 100svh;
     font-size: 30px;
+    overflow: hidden;
 }
 .about-typing {
-    font-size: 100px;
+    font-size: clamp(10px, 6vw, 120px);
     font-weight: 700;
     color: #888;
-    margin-left: 12%;
-    padding-top: 20px;
+    padding: 60px 13%;
 }
 .about-typing .about-prefix {
     margin-right: 2px;
@@ -156,13 +155,21 @@ body {
 .about-words {
     color: var(--highlight);
 }
-.about-content {
-    display: flex;
-}
-.about-content p {
-    margin-top: 50px;
+
+.about-content div p {
     max-width: 400px;
-    margin-left: 2%;
+    margin-left: 10%;
+    float: left;
+}
+
+#ico-container {
+    float: right;
+    position: absolute;
+    z-index: -1;
+    width: 140%;
+    height: 130%;
+    left: 10%;
+    top: 00%;
 }
 
 /* ==================== PROJECTS / INTERETS ==================== */
