--- a/index.css
+++ b/index.css
@@ -61,7 +61,12 @@ body {
     align-items: center;
     color: var(--text);
     height: 100svh;
-    background-image: url("gradientDark.png");
+    background-image: linear-gradient(
+        135deg,
+        #040656,
+        #603162,
+        #a2647c
+    );
     padding: 0 10%;
     justify-content: space-between;
 }
