--- a/astronomy/astronomy.css
+++ b/astronomy/astronomy.css
@@ -10,7 +10,8 @@
 }
 
 body {
-    color: #eee
+    color: #eee;
+    background-color: black; 
 }
 
 /* ====================== PARALLAX STARRY NIGHT HEADER ====================== */
@@ -20,6 +21,7 @@ body {
     background-size: cover;
     height: 78vh;
     position: relative;
+    isolation: isolate;
     z-index: -2;
 }
 .foreground {
@@ -39,10 +41,30 @@ body {
 
 
 main {
-    padding: 40px 25%;
+    z-index: 1;
     background-color: black;
 }
 
+h2 {
+    padding-top: 140px;
+    padding-bottom: 100px;
+    font-size: 90px;
+    width: 100%;
+    text-align: center;
+}
+
+.intro {
+    display: flex;
+    align-items: center;
+}
+
+.intro img {
+    height: 400px;
+    border-radius: 30px;
+    margin: 70px;
+}
+
 p {
-    font-size: 24px;
+    font-size: 30px;
+    margin: 80px;
 }
