--- a/index.css
+++ b/index.css
@@ -78,6 +78,7 @@ body {
 
 .landing-content {
     max-width: 900px;
+    margin-top: 10%;
 }
 .landing-content h1 {
     font-size: 120px;
@@ -94,8 +95,7 @@ body {
 }
 
 .socials {
-    position: absolute;
-    bottom: 120px;
+    margin-top: 20%;
     width: 250px;
     display: flex;
     justify-content: space-between;
@@ -134,6 +134,45 @@ body {
 }
 .socials a:hover::before {
     width: 100%;
+}
+
+@media (max-width: 1570px) {
+    .landing {
+        padding: 0 5%;
+        transition: 0.3s;
+    }
+    .landing img{
+        width: 500px;
+        transition: 0.3s;
+    }
+}
+@media (max-width: 1300px) {
+    .landing img{
+        width: 450px;
+        transition: 0.3s;
+    }
+    .landing-content h1 {
+        font-size: 8vw;
+    }
+}
+
+@media (max-width: 1000px) {
+    .landing {
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .landing-content h1 {
+        font-size: 100px;
+        text-align: center;
+    }
+    .landing-content h2 {
+        font-size: 40px;
+        text-align: center;
+    }
+    .socials {
+        margin-top: 5%;
+        transition: 0.3s;
+    }
 }
 
 /* ====================== ABOUT ME ====================== */
