--- a/index.css
+++ b/index.css
@@ -16,6 +16,10 @@
     --highlight: mediumpurple;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: var(--main-bg);
 }
@@ -43,6 +47,7 @@ body {
 }
 
 .navbar a {
+    position: relative;
     font-size: 24px;
     color: var(--text);
     text-decoration: none;
@@ -51,12 +56,30 @@ body {
     transition: .3s;
 }
 .navbar a:hover {
-    color: #bbb;
+    color: #aaa;
+}
+
+.navbar a::before {
+    content: "";
+    position: absolute;
+    background-color: var(--highlight);
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 3px;
+    z-index: -1;
+    transition: .5s;
+
+}
+
+.navbar a:hover::before {
+    width: 100%;
 }
 
 /* ====================== LANDING PAGE ====================== */
 
 .landing {
+    position: relative;
     display: flex;
     align-items: center;
     color: var(--text);
@@ -78,7 +101,7 @@ body {
 
 .landing-content {
     max-width: 900px;
-    margin-top: 10%;
+    margin-bottom: 10%;
 }
 .landing-content h1 {
     font-size: 120px;
@@ -95,7 +118,8 @@ body {
 }
 
 .socials {
-    margin-top: 20%;
+    position: absolute;
+    bottom: 20vh;
     width: 250px;
     display: flex;
     justify-content: space-between;
@@ -136,45 +160,6 @@ body {
     width: 100%;
 }
 
-@media (max-width: 1570px) {
-    .landing {
-        padding: 0 5%;
-        transition: 0.3s;
-    }
-    .landing img{
-        width: 500px;
-        transition: 0.3s;
-    }
-}
-@media (max-width: 1300px) {
-    .landing img{
-        width: 450px;
-        transition: 0.3s;
-    }
-    .landing-content h1 {
-        font-size: 8vw;
-    }
-}
-
-@media (max-width: 1000px) {
-    .landing {
-        flex-direction: column;
-        justify-content: space-evenly;
-    }
-    .landing-content h1 {
-        font-size: 100px;
-        text-align: center;
-    }
-    .landing-content h2 {
-        font-size: 40px;
-        text-align: center;
-    }
-    .socials {
-        margin-top: 5%;
-        transition: 0.3s;
-    }
-}
-
 /* ====================== ABOUT ME ====================== */
 
 .about {
@@ -199,11 +184,10 @@ body {
 .about-words {
     color: var(--highlight);
 }
-
-.about-content div p {
-    max-width: 400px;
-    margin-left: 10%;
-    float: left;
+.about-content {
+    margin-left: 8%;
+    width: 40%;
+    font-size: 28px;
 }
 
 #ico-container {
@@ -215,28 +199,22 @@ body {
     left: 10%;
     top: 00%;
 }
+.hint {
+    color: #555;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;    
+}
 
 /* ==================== PROJECTS / INTERETS ==================== */
 
 .projects-interests {
-    position: relative;
-    height: 100svh;
-    isolation: isolate;
-}
-
-/* To make diagonal effect */
-.projects-interests::after {
-    content: "";
     background-image: linear-gradient(
         45deg,
-        #12c2e9,
-        #c471ed,
-        #f64f59
+        #333,
+        #111
     );
-    position: absolute;
-    z-index:-1;
-    inset: 0;
-    transform: skewY(-5deg);
+    height: 100svh;
 }
 
 .projects-interests h1 {
@@ -248,9 +226,9 @@ body {
 }
 
 .projects-interests p {
-    color: var(--text);
+    color: var(--highlight);
     text-align: center;
-    font-size: 20px;
+    font-size: 28px;
     font-weight: 600;
 }
 
@@ -282,6 +260,68 @@ body {
     background-image: url("https://images.squarespace-cdn.com/content/v1/5504d100e4b08eb858c4e8fc/1529015914950-BHRMYUXKGXF9LXH6AAD6/Starry+Night.jpeg?format=1500w");
     background-size: cover;
     background-position: 90%;
+}
+
+/* Responsive Design with Media Queries */
+
+@media (max-width: 1570px) {
+    .header {
+        padding: 12px 2%;
+        transition: 0.3s
+    }
+    .landing {
+        padding: 0 5%;
+        transition: 0.3s;
+    }
+    .landing img{
+        width: 450px;
+        transition: 0.3s;
+    }
+}
+@media (max-width: 1300px) {
+    .landing img{
+        width: 400px;
+        transition: 0.3s;
+    }
+    .landing-content h1 {
+        font-size: 8vw;
+    }
+}
+@media (max-width: 1000px) {
+    .landing {
+        flex-direction: column;
+        justify-content:center
+    }
+    .landing-content {
+        margin-bottom: 0;
+    }
+    .landing-content h1 {
+        font-size: 100px;
+        text-align: center;
+    }
+    .landing-content h2 {
+        font-size: 40px;
+        text-align: center;
+    }
+    .socials {
+        transition: 0.3s;
+        position: unset;
+        margin: 30px 0;
+    }
+}
+@media (max-width: 720px) {
+    .landing-content h1 {
+        font-size: clamp(0px, 15vw, 100px);
+    }
+    .landing-content h2 {
+        font-size: clamp(0px, 7vw, 40px);
+    }
+    .landing-content h3 {
+        font-size: clamp(0px, 3vw, 24px);
+    }
+    .landing img{
+        width: clamp(0px, 75vw, 400px);
+    }
 }
 
 
