Card Hover / clean

--- a/astronomy/astronomy.css
+++ b/astronomy/astronomy.css
@@ -11,7 +11,7 @@
 
 body {
     color: #eee;
-    background-color: black;
+    background-color: #111;
     overflow-x: hidden;
 }
 
@@ -68,38 +68,50 @@ p {
 }
 
 /* ====================== CARDS AND LINKS ====================== */
-.astro-cards {
+.card-container {
     display: flex;
     justify-content: space-evenly;
     padding: 60px 10%;
 }
-.astro-cards a {
+.card-container a {
     display: flex;
     flex-direction: column;
     width: 300px;
     justify-content: space-between;
     align-items: center;
     text-decoration: none;
+    transition: 0.3s;
 }
 a img {
     width: 100%;
     border: mediumpurple;
     border-style: solid;
 }
-.astro-cards a p {
+.card-container a p {
     text-align: center;
-    color: #eee;
+    color: #bbb;
     width: 100%;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 500;
+    background-color: #333;
+    border-radius: 24px;
+    padding: 10px 0;
+}
+.card-container a:hover p {
+    background-color: #eee;
+    color: mediumpurple;
+    transition: .5s;
+}
+.card-container a:hover {
+    transform: translate(0, -10px);
 }
 
 /* Responsive Design */
 @media (max-width: 1200px) {
-    .astro-cards a {
+    .card-container a {
         width: 200px
     }
-    .astro-cards a p {
+    .card-container a p {
         font-size: 16px;
     }
 
@@ -113,14 +125,14 @@ a img {
         font-size: clamp(20px, 9vw, 80px);
     }
 
-    .astro-cards {
+    .card-container {
         flex-direction: column;
         align-items: center;
     }
-    .astro-cards a {
+    .card-container a {
         width: 300px;
     }
-    .astro-cards a p {
+    .card-container a p {
         font-size: 24px;
     }
 }
