--- a/articles/style.css
+++ b/articles/style.css
@@ -25,13 +25,29 @@ h4 {
 .information {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 40px;
 }
 .title-bg {
     display: flex;
     background-image: linear-gradient(to right, #ff416c, #ff4b2b);
     width: 100%;
     justify-content: center;
+}
+
+.information div {
+    display: flex;
+    align-items: center;
+}
+.information h4 {
+    display: flex;
+    align-items: center;
+}
+.information div img {
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    margin-right: 20px;
+    box-shadow: none;
+    margin: 16px;
 }
 
 h1 {
@@ -54,6 +70,7 @@ img {
     display: block;
     margin: 32px auto;
     box-shadow: 0 0 12px grey;
+    border-radius: 5px;
 }
 
 a, p {
@@ -75,4 +92,25 @@ code {
     display: flex;
     justify-content: center;
     margin: 30px 0;
+}
+
+@media (max-width: 1300px) {
+    h1 {
+        font-size: 48px;
+    }
+}
+@media (max-width: 720px) {
+    h1 {
+        font-size: 24px;
+    }
+    main {
+        width: 100vw;
+        padding: 50px 16px;
+    }
+}
+@media (max-width: 500px) {
+    .information {
+        flex-direction: column;
+        align-items: center;
+    }
 }
