--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@
     --main-bg: #111;
     --text: #eee;
     --highlight: mediumpurple;
+    --blue: rgb(41, 121, 255);
 }
 
 html {
@@ -249,70 +250,97 @@ body {
 /* ==================== PROJECTS / INTERETS ==================== */
 
 .projects-interests {
-    background-color: #222;
+    background-color: #181818;
     min-height: 100svh;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    position: relative;
 }
-
-.projects-interests h1 {
-    padding-top: 50px;
-    text-align: center;
-    font-size: 100px;
-    color: #eee;
-}
-
-.projects-interests p {
-    color: mediumpurple;
-    text-align: center;
-    font-size: 28px;
-    font-weight: 600;
-    margin: 0 5%;
+#background {
+    position: absolute;
+    bottom: 0;
 }
 
 .card-container {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
     padding: 60px 10%;
 }
 .card-container a {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    justify-content: space-between;
-    align-items: center;
     text-decoration: none;
+    font-size: 110px;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #333;
     transition: 0.3s;
 }
-a img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    border: mediumpurple;
-    border-style: solid;
+.card-container a span {
+    transition: 0.3s;
+    display: inline-block;
 }
-.card-container a p {
-    text-align: center;
-    color: #eee;
-    width: 100%;
-    font-size: 22px;
-    font-weight: 500;
-    background-color: #111;
-    border-radius: 24px;
-    padding: 10px 0;
-    margin: 20px 0;;
-}
-.card-container a:hover p {
-    background-color: #eee;
-    color: mediumpurple;
-    transition: .5s;
-}
-.card-container a:hover {
-    transform: translate(0, -10px);
+.card-container a:hover span {
+    background: linear-gradient(to right,
+    var(--highlight),
+    var(--blue)
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 300%;
 }
 
+
+.card-container a:hover span:nth-child(1) {
+    transform: translate(-80%, 60%) rotate(8deg);
+}
+  
+.card-container a:hover span:nth-child(2) {
+    transform: translate(-40%, 20%) rotate(4deg);
+}
+  
+.card-container a:hover span:nth-child(3) {
+    transform: translate(-10%, 60%) rotate(-6deg);
+}
+  
+.card-container a:hover span:nth-child(4) {
+    transform: translate(0%, 8%) rotate(-8deg);
+}
+  
+.card-container a:hover span:nth-child(5) {
+    transform: translate(0%, -20%) rotate(5deg);
+}
+  
+.card-container a:hover span:nth-child(6) {
+    transform: translate(0%, 20%) rotate(-3deg);
+}
+  
+.card-container a:hover span:nth-child(7) {
+    transform: translate(0%, -40%) rotate(-5deg);
+}
+  
+.card-container a:hover span:nth-child(8) {
+    transform: translate(0%, 15%) rotate(10deg);
+}
+  
+.card-container a:hover span:nth-child(9) {
+    transform: translate(0%, -50%) rotate(8deg);
+}
+  
+.card-container a:hover span:nth-child(10) {
+    transform: translate(0%, 15%) rotate(-6deg);
+}
+  
+.card-container a:hover span:nth-child(11) {
+    transform: translate(50%, -10%) rotate(-3deg);
+}
+  
+.card-container a:hover span:nth-child(12) {
+    transform: translate(120%, -30%) rotate(-10deg);
+}
 /* Cool THREE.js effect at bottom of page
 https://codepen.io/soju22/pen/PLeLwo */
 
@@ -346,9 +374,8 @@ https://codepen.io/soju22/pen/PLeLwo */
         width: unset;
         font-size: 28px;
     }
-    .card-container {
-        flex-direction: column;
-        align-items: center;
+    .card-container a {
+        font-size: 90px;
     }
 }
 @media (max-width: 1000px) {
@@ -375,6 +402,9 @@ https://codepen.io/soju22/pen/PLeLwo */
 
     .hint {
         display: none;
+    }
+    .card-container a {
+        font-size: 72px;
     }
 }
 @media (max-width: 720px) {
@@ -404,11 +434,7 @@ https://codepen.io/soju22/pen/PLeLwo */
     .landing {
         padding: 0 5%;
     }
-    .projects-interests h1 {
-        font-size: 50px;
-        margin: 0 5%;
-    }
-    .projects-interests p {
-        font-size: 20px;
+    .card-container a {
+        font-size: 10vw;
     }
 }
