--- a/articles/style.css
+++ b/articles/style.css
@@ -12,6 +12,17 @@ body {
     align-items: center;
     flex-direction: column;
 }
+/* scroll bar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #ddd;
+}
+::-webkit-scrollbar-thumb {
+    background: #aaa;   
+}
+
 main {
     max-width: 700px;
     padding: 50px 16px;
