--- a/astronomy/astronomy.css
+++ b/astronomy/astronomy.css
@@ -11,8 +11,17 @@
 
 body {
     color: #eee;
-    background-color: #111;
     overflow-x: hidden;
+}
+/* scroll bar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #555;
+}
+::-webkit-scrollbar-thumb {
+    background: #eee;
 }
 
 /* ====================== PARALLAX STARRY NIGHT HEADER ====================== */
@@ -39,7 +48,6 @@ body {
     text-align: center;
     z-index: -1;
     width: 100%;
-    text-shadow: 0px 0px 4px #000;
 }
 .foreground {
     position: absolute;
@@ -62,9 +70,9 @@ h2 {
     font-size: 80px;
 }
 p {
-    width: 700px;
+    max-width: 700px;
     margin: 20px auto;
-    font-size: 18px;
+    font-size: 1.3rem;
 }
 
 /* ====================== CARDS AND LINKS ====================== */
@@ -106,6 +114,13 @@ a img {
     transform: translate(0, -10px);
 }
 
+#footer-img {
+    height: 20vw;
+    background-image: url("https://pbs.twimg.com/media/FTx7bDVXwAEy5Xa?format=jpg&name=large");
+    background-size: cover;
+    background-position-y: 30%;
+}
+
 /* Responsive Design */
 @media (max-width: 1200px) {
     .card-container a {
@@ -118,7 +133,6 @@ a img {
 }
 @media (max-width: 800px) {
     p {
-        width: unset;
         margin: 20px 5%;
     }
     h2 {
